# AgroBotCore-PARC-Project

./: README.md  run_sim.sh
.devcontainer/: Dockerfile  devcontainer.json
agrobot_description/urdf/: agrobot.xacro
config/: gps_params.yaml
launch/: gps_sim.launch.py
ros_ws/: setup.sh
ros_ws/src/field_navigator/: CMakeLists.txt  package.xml
ros_ws/src/field_navigator/launch/: maize_sim.launch.py
ros_ws/src/field_navigator/src/: navigator_node.cpp
ros_ws/src/simple_robot/: package.xml  setup.py
ros_ws/src/simple_robot/launch/: simulation.launch.py
ros_ws/worlds/: maize_field.world
src/: gps_node.py
urdf/: gps_sensor.xacro
