<?xml version="1.0"?>
<package format="3">
  <name>simple_robot</name>
  <version>0.0.0</version>
  <description>Simple robot simulation package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>gazebo_ros</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
